--- a/anabeesh/src/main/res/layout/item_question.xml
+++ b/anabeesh/src/main/res/layout/item_question.xml
@@ -15,6 +15,7 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginLeft="@dimen/margin"
+        android:transitionName="cover_activity_transition"
         app:layout_constraintBottom_toBottomOf="@id/tv_body"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintLeft_toLeftOf="parent"
