--- a/anabeesh/src/main/res/layout/fragment_home.xml
+++ b/anabeesh/src/main/res/layout/fragment_home.xml
@@ -1,12 +1,26 @@
 <android.support.v4.widget.SwipeRefreshLayout android:id="@+id/swipe_refresh_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.rxmuhammadyoussef.anabeesh.ui.home.HomeFragment">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_home_feed"
+    <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_home_feed"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left|bottom"
+            android:layout_margin="@dimen/margin"
+            android:src="@drawable/ic_edit"
+            app:fabSize="normal" />
+    </android.support.design.widget.CoordinatorLayout>
 </android.support.v4.widget.SwipeRefreshLayout>
