--- a/anabeesh/src/main/res/layout/activity_host.xml
+++ b/anabeesh/src/main/res/layout/activity_host.xml
@@ -14,7 +14,9 @@
         android:layout_height="?attr/actionBarSize"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:popupTheme="@style/HostToolbarPopupMenuStyle"
+        app:theme="@style/HostToolbarPopupMenuStyle">
 
         <TextView
             android:id="@+id/tv_title"
