--- a/anabeesh/src/main/res/layout/item_section_title.xml
+++ b/anabeesh/src/main/res/layout/item_section_title.xml
@@ -13,8 +13,7 @@
         android:layout_marginBottom="@dimen/margin_micro"
         android:layout_marginEnd="@dimen/margin"
         android:layout_marginStart="@dimen/margin"
-        android:layout_marginTop="@dimen/margin_ultra"
-        android:paddingTop="@dimen/padding"
+        android:layout_marginTop="@dimen/margin_extra"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
