--- a/anabeesh/src/main/res/values/colors.xml
+++ b/anabeesh/src/main/res/values/colors.xml
@@ -1,28 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!--Main-->
-    <color name="colorPrimary">#00A8FE</color>
-    <color name="colorPrimaryDark">#00A8FE</color>
-    <color name="colorAccent">#00A8FE</color>
+    <color name="colorPrimary">#000000</color>
+    <color name="colorPrimaryDark">#000000</color>
+    <color name="colorAccent">#029e74</color>
     <color name="colorAccentLight">#9F9C9D</color>
-    <color name="colorLayoutBackground">#e4e7ee</color>
+    <color name="colorLayoutBackground">#eeeeee</color>
+    <color name="colorReadingLayoutBackground">#ffffff</color>
     <color name="colorNavDrawerHeaderBackground">#ffffff</color>
     <color name="colorNavDrawerContentBackground">#f7f7f7</color>
     <color name="colorDivider">#9e9e9e</color>
 
     <!--Text-->
     <color name="colorTextPrimaryDark">#212121</color>
-    <color name="colorTextPrimaryLight">#ffffff</color>
+    <color name="colorTextPrimaryLight">#aaffffff</color>
     <color name="colorTextSecondaryDark">#707070</color>
     <color name="colorTextSecondaryLight">#9e9e9e</color>
-    <color name="colorTextClickable">#00A8FE</color>
+    <color name="colorTextClickable">#029e74</color>
+    <color name="colorTextWarning">#f54f43</color>
 
     <!--Splash-->
     <color name="colorSplashLayoutBackground">@color/colorLayoutBackground</color>
 
     <!--Registration-->
-    <color name="colorPrimaryRegistration">#e4e7ee</color>
-    <color name="colorPrimaryDarkRegistration">#e4e7ee</color>
+    <color name="colorPrimaryRegistration">@color/colorLayoutBackground</color>
+    <color name="colorPrimaryDarkRegistration">@color/colorLayoutBackground</color>
     <color name="colorAccentRegistration">@color/colorAccent</color>
     <color name="colorRegisterLayoutBackground">@color/colorLayoutBackground</color>
     <!--TextView-->
@@ -45,8 +47,8 @@
     <color name="colorRegistrationSemiCircleButtonPressed">@color/colorPrimary</color>
 
     <!--Login-->
-    <color name="colorPrimaryLogin">#FFE3E6ED</color>
-    <color name="colorPrimaryDarkLogin">#FFE3E6ED</color>
+    <color name="colorPrimaryLogin">@color/colorLayoutBackground</color>
+    <color name="colorPrimaryDarkLogin">@color/colorLayoutBackground</color>
     <color name="colorAccentLogin">@color/colorAccent</color>
     <color name="colorLoginLayoutBackground">@color/colorLayoutBackground</color>
     <!--TextView-->
@@ -69,8 +71,8 @@
     <color name="colorLoginSemiCircleButtonPressed">@color/colorPrimary</color>
 
     <!--Host-->
-    <color name="colorPrimaryHost">#ffffff</color>
-    <color name="colorPrimaryDarkHost">#ffffff</color>
+    <color name="colorPrimaryHost">#000000</color>
+    <color name="colorPrimaryDarkHost">#000000</color>
     <color name="colorAccentHost">@color/colorAccent</color>
     <color name="colorHostLayoutBackground">@color/colorLayoutBackground</color>
     <!--TextView-->
