--- a/anabeesh/src/main/res/layout/item_category.xml
+++ b/anabeesh/src/main/res/layout/item_category.xml
@@ -59,4 +59,15 @@
         app:layout_constraintRight_toLeftOf="@id/tv_title"
         app:layout_constraintTop_toTopOf="@id/iv_category"
         tools:text="Follow" />
+
+    <ProgressBar
+        android:id="@+id/pb_follow"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@id/btn_follow"
+        app:layout_constraintEnd_toEndOf="@id/btn_follow"
+        app:layout_constraintStart_toStartOf="@id/btn_follow"
+        app:layout_constraintTop_toTopOf="@id/btn_follow"
+        tools:visibility="visible" />
 </android.support.constraint.ConstraintLayout>
