--- a/anabeesh/src/main/res/layout/content_question_details_header.xml
+++ b/anabeesh/src/main/res/layout/content_question_details_header.xml
@@ -1,31 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout android:id="@+id/item_container"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/margin_micro"
-    android:background="@drawable/card"
-    android:elevation="@dimen/elevationHomeCard"
-    android:minHeight="160dp">
+    tools:showIn="@layout/item_question_details">
 
     <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/iv_cover"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_marginLeft="@dimen/margin"
+        android:layout_width="0dp"
+        android:layout_height="300dp"
+        android:layout_marginBottom="@dimen/margin"
+        android:layout_marginTop="@dimen/margin"
         android:transitionName="cover_activity_transition"
-        app:layout_constraintBottom_toBottomOf="@id/tv_body"
-        app:layout_constraintHorizontal_bias="0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/tv_header"
-        app:layout_constraintTop_toTopOf="@id/tv_header"
-        app:riv_corner_radius="3dp"
+        app:layout_constraintBottom_toTopOf="@id/tv_header"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed"
+        app:riv_corner_radius="0dp"
         app:riv_mutate_background="true"
         app:riv_oval="false"
         tools:scaleType="centerCrop"
-        android:autoLink="all"
         tools:src="@mipmap/ic_launcher" />
 
     <TextView
@@ -33,18 +29,17 @@
         style="@style/HomeTextViewTitleStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/margin_nano"
+        android:layout_marginBottom="@dimen/margin"
         android:layout_marginEnd="@dimen/margin"
         android:layout_marginStart="@dimen/margin"
-        android:layout_marginTop="@dimen/margin_micro"
+        android:layout_marginTop="@dimen/margin"
         android:gravity="right"
-        android:singleLine="true"
         app:layout_constraintBottom_toTopOf="@id/tv_body"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0"
-        app:layout_constraintLeft_toRightOf="@id/iv_cover"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/iv_cover"
+        app:layout_constraintVertical_chainStyle="spread_inside"
         tools:text="Article title goes here" />
 
     <TextView
@@ -53,14 +48,12 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/margin"
-        android:ellipsize="end"
-        android:gravity="right"
-        android:maxLines="3"
         android:autoLink="all"
+        android:textIsSelectable="true"
+        android:gravity="right"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/tv_header"
         app:layout_constraintStart_toStartOf="@id/tv_header"
         app:layout_constraintTop_toBottomOf="@id/tv_header"
         tools:text="Article body goes here and it looks like this when there is multiple lines, the max lines should be 3 lines and the article should have internal design to see the full article content." />
-
 </android.support.constraint.ConstraintLayout>
