--- a/anabeesh/src/main/res/layout/item_article.xml
+++ b/anabeesh/src/main/res/layout/item_article.xml
@@ -53,6 +53,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/margin"
+        android:autoLink="all"
         android:ellipsize="end"
         android:gravity="right"
         android:maxLines="3"
