--- a/anabeesh/src/main/res/menu/menu_host.xml
+++ b/anabeesh/src/main/res/menu/menu_host.xml
@@ -3,6 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/menu_notification"
+        android:actionLayout="@layout/activity_host"
+        android:icon="@drawable/ic_notifications"
+        android:title="@string/notifications"
+        app:showAsAction="ifRoom" />
+
+    <item
         android:id="@+id/menu_search"
         android:actionLayout="@layout/activity_host"
         android:icon="@drawable/ic_search"
